--- a/BookmarkerApp/index.html
+++ b/BookmarkerApp/index.html
@@ -13,7 +13,7 @@
     <link href="css/style.css" rel="stylesheet">
     </head>
 
-  <body>
+  <body onload="fetchBookmarks()">
 
     <div class="container">
       <div class="header clearfix">
@@ -53,7 +53,7 @@
       </footer>
 
     </div> <!-- /container -->
-    
+
     <script
   src="http://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
