Added JS inheritance,classes,objects

--- a/JavasScript OOP/index.html
+++ b/JavasScript OOP/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="3_prototypes.js"></script>
+    <script src="4_create_Objects.js"></script>
 </body>
 </html>
